--- a/Resources/Message Styles/Mockie.AdiumMessageStyle/Contents/Resources/styles/layout.css
+++ b/Resources/Message Styles/Mockie.AdiumMessageStyle/Contents/Resources/styles/layout.css
@@ -73,8 +73,7 @@ body {
 }
 
 .text {
-	margin: 0 40px 0 0;
-	padding: 2px 4px 2px 4px;
+	padding: 2px 75px 2px 4px;
 }
 
 .status_container {
